# DomId

./: .gitignore  .gitmodules  LICENSE.txt  README.md  README_development.md  README_paper.md  README_sphinx.md  ci.sh  ci_pytest_cov.sh  development.md  experiments.sh  experiments_her2.sh  experiments_in_miccai_submission.md  experiments_in_paper_submission.md  experiments_mnist10.sh  experiments_mnist5.sh  final_reproduced_results.md  gen_doc.sh  main_out.py  pyproject.toml  requirements.txt  sdcn_experiments.md  sh_format_code.sh  test_config.sh
.github/workflows/: ci.yml
docs/: Makefile  about.md  add_dset.md  add_model.md  addnew_link.rst  conf.py  domid.algos.rst  domid.compos.rst  domid.dsets.rst  domid.models.rst  domid.rst  domid.tasks.rst  domid.tests.rst  domid.trainers.rst  domid.utils.rst  index.html  index.rst
docs/markdownfiles/: README_MICCAI2023_paper.md  conferences_commandlines.md
docs_old/: about.md  conf.py  domid.dsets.rst  domid.trainers.rst
domid/: arg_parser.py  mk_exp.py
domid/algos/: builder_AE.py  builder_ae.py  builder_dec.py  builder_m2yd.py  builder_sdcn.py  builder_vade.py  builder_vade_cnn.py  builder_vade_cnn_tuner.py  zoo_algos.py
domid/compos/: DEC_clustering_layer.py  GNN.py  GNN_layer.py  VAE_blocks.py  clustering_layer.py  cnn_AE.py  cnn_VAE.py  linear_AE.py  linear_VAE.py  nn_net.py  predict_basic.py  storing.py  tensorboard_fun.py
domid/dsets/: a_dset_mnist_color_rgb_solo.py  dset_her2.py  dset_her3.py  dset_mnist.py  dset_mnist_color_solo_default.py  dset_test.py  dset_unittest.py  dset_usps.py  dset_weah.py  dset_wsi.py  generate_dataset_dataframe_her2.py  make_graph.py  make_graph_a.py  make_graph_her2.py  make_graph_wsi.py
domid/models/: a_model_cluster.py  model_AE.py  model_ae.py  model_dec.py  model_m2yd.py  model_sdcn.py  model_vade.py  model_vade_cnn.py  model_vade_cnn_nonbinary.py  model_vade_force_y  model_vade_nonbinary.py  model_vade_v2.py
domid/tasks/: b_task.py  b_task_cluster.py  her2_task.py  task_her2.py  task_her3.py  task_mnist.py  task_mnist_color.py  task_test.py  task_unittest.py  task_usps.py  task_weah.py  task_wsi.py  zoo_tasks.py
domid/tests/: domain_labels.txt  test_domid.py  test_graph.py  test_losses.py  test_mnist_dataset.py  test_model_builder.py  test_model_trainer.py  (+1 more)
experiments/: experiments_her2.sh  experiments_mnist5.sh
notebooks/: AE_reconstruction.ipynb  HER2_CHIL_paper_figures.ipynb  HER2_Correlation_analysis.ipynb  HER2_boxplot_visualizations.ipynb  HER2_machine_clustering.ipynb  HER2_results.ipynb  HER2_task_test.ipynb  MICCAI_tutorial.ipynb  MNIST_VaDE_CDVaDE_DEC.ipynb  MNIST_color_post_training_analysis.ipynb  MNIST_task_test.ipynb  Tutorial_model_training.ipynb  WSI_mask_plotting.ipynb  WSI_visualizations.ipynb  WashU_between_exp_comparison.ipynb  WashU_dset.ipynb  WashU_paper_figures.ipynb  case-study-HER2_AE_SDCN.ipynb  case-study-HER2_VaDE_CDVaDE_DEC.ipynb  case-study-HER2_results_boxplots.ipynb  case-study-HER2_results_correlation_analysis.ipynb  case-study-WashU-vizualization.ipynb  case-study-WashU_AE_SDCN.ipynb  graph_visualization.ipynb  tsne_tensorboard.py  tutorial-MNIST_sdcn.ipynb  tutorial-MNIST_vade_cdvade_dec.ipynb
(+127 files in other folders)
