[tool.poetry]
name = "domid"
version = "0.1.0"
description = "Deep unsupervised clustering algorithms for domain identification."
authors = ["agisga <11449372+agisga@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10.4"
tensorboard =  "^2.6"
tensorboardX = "^2.5.1"
pandas = "^1.5.2"
scipy = "^1.9.3"
scikit-learn = "^1.1.3"
tabulate = "^0.9.0"
ray = "^2.1.0"
opencv-python = "^4.6.0.66"
grpcio = "^1.54.0"
domainlab = {git = "https://github.com/marrlab/DomainLab.git", rev = "master"}

[tool.poetry.dev-dependencies]
jupyterlab = "^2.2.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
# 'extend-exclude' excludes files or directories in addition to the defaults
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
(
  ^/notebooks/.*
)
'''
